planning_tests/scheduling_planning/jobshop/invalid_problems/invalid_problem_7_4.jsp
nb_jobs nb_machines optimal
4 4 32 0
Times
1 3 6 7
5 4 8 9
9 3 5 4
3 3 9 10
Machines
3 1 2 4
3 4 1 2
3 2 1 4
2 4 1 3
Starts
0 1 4 10 
6 15 23 28 
1 6 15 23 
0 3 6 15 